--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
     {{ partial "intro.html" . }}
 
     <ol class="post-list">
-        {{ $pag := .Paginate (where .Data.Pages "Type" "post") }}
+        {{ $pag := .Paginate (where .Pages "Type" "in" .Site.Params.mainSections) }}
         {{ range $pag.Pages }}
             {{ partial "post-stub.html" . }}
         {{ end }}
